--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </div>
                 <div class="col-lg-6 col-md-6">
                     <div class="testimonal">
-                        <img src="images/img2.jpg" alt="img2">
+                        <img src="img2.jpg" alt="img2">
                         <div class="author">Bill Gates</div>
                         <div class="company">Microsoft</div>
                         <p class="lead">Lorem ipsum dolor sit amet consectetur
@@ -99,7 +99,7 @@
                 </div>
                 <div class="col-lg-6 col-md-6">
                     <div class="testimonal">
-                        <img src="images/img3.jpg" alt="img3">
+                        <img src="img3.jpg" alt="img3">
                         <div class="author">Ratan Tata</div>
                         <div class="company">TATA</div>
                         <p class="lead">Lorem ipsum dolor sit amet consectetur
@@ -118,7 +118,7 @@
                 </div>
                 <div class="col-md-6 col-lg-3">
                     <div class="news">
-                        <img src="images/img5.jpg" alt="img5">
+                        <img src="img5.jpg" alt="img5">
                         <h3><a href="">This is Heading 1</a></h3>
                         <div class="postdate">10 Nov 2020</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -130,7 +130,7 @@
 
                 <div class="col-md-6 col-lg-3">
                     <div class="news">
-                        <img src="images/img6.jpg" alt="img6">
+                        <img src="img6.jpg" alt="img6">
                         <h3><a href="">This is Heading 2</a></h3>
                         <div class="postdate">10 Nov 2020</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -142,7 +142,7 @@
 
                 <div class="col-md-6 col-lg-3">
                     <div class="news">
-                        <img src="images/img7.jpg" alt="img7">
+                        <img src="img7.jpg" alt="img7">
                         <h3><a href="">This is Heading 3</a></h3>
                         <div class="postdate">10 Nov 2020</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -154,7 +154,7 @@
 
                 <div class="col-md-6 col-lg-3">
                     <div class="news">
-                        <img src="images/img8.jpg" alt="img8">
+                        <img src="img8.jpg" alt="img8">
                         <h3><a href="">This is Heading 4</a></h3>
                         <div class="postdate">10 Nov 2020</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
